Versions with "_xx" subversions are internal test releases.


0.07_01 1999.??.??
------------------

Fixed a race or TCP/IP stack problem in SocketFactory.  SocketFactory
was firing a "connect error 0" if the server side sent data
immediately.  The problem was tested on four systems: Linux (broke);
Solaris (broke); FreeBSD (worked); OS/2 (worked).  Go figure.  It
should work on all four now.


0.07 1999.06.18 (!!!)
---------------------

Revised the new manpages based on reader feedback.

Bumped the version number to 0.07 and released it to the CPAN.  This
version contains all the changes, including one minor interface
change.  It's that change that warrants the (!!!) icon, so don't
panic.  This is NOT another 0.05 -> 0.06 API changefest of pain.


0.0609 1999.06.15 (!!!)
-----------------------

Updated samples/*sessions.perl to test $kernel->state(...) and
discovered that the documentation was wrong about this function.
Thanks, Artur, for pointing this out.

Fixed the documentation for $kernel->state(...) with regards to
package and object sessions.

Made POE::Session an array reference, as part of the reorganization of
POE's internals.

Revised all the manpages.  Split the manpages into separate PODs, and
put them at the end of each module.  Rewnote the POE.pm overview,
added some ASCII art, and threw away the "Design Goals" and related
hype.  Removed POE-TODO and POE-HINTS manpages.

Updated the README to be more readable.  Moved the mailing list and
web site information there.  Should either or both change, stale
information won't rot in a thousand manpages around the world.

Removed design notes from the ends of Kernel and Session, because docs
go there now.  Moved them to POE-TODO, which is now not included.

&POE::Session::create was broken-- I'm not sure how it worked to begin
with.  Fixed.

Revised the POE::Filter::HTTPD documentation to follow the rest of the
manpages' format.

(!!!) Minor interface change.  &POE::Session::option can now fetch